# finance-numerics

./: .gitattributes  .gitignore  README.md
Black-Scholes/: Black-scholes-EU-call-KAN-pinn.pth  README.md  black-scholes-EU-call-KAN-pinn.ipynb
Black-Scholes/Finite-elements/: CMakeLists.txt  black-scholes.cc
Black-Scholes/Finite-elements/build-transformed/: CMakeLists.txt  black-scholes  black-scholes-transformed  black-scholes.cc  run.sh
Black-Scholes/Finite-elements/build-transformed/output/: Black-Scholes-evolution.gnuplot  Black-Scholes-evolution.vtu  t=0.000000_cycle_1.gnuplot  t=0.000000_cycle_1.vtu  t=0.000000_cycle_2.gnuplot  t=0.000000_cycle_2.vtu
Black-Scholes/Finite-elements/src/: black-scholes.cc
Black-Scholes/PINNs/: Black-scholes-EU-call-KAN-pinn.pth  black-scholes-EU-call-KAN-pinn.ipynb
Black-Scholes/PINNs/Standard/: Black-scholes-EU-call-KAN-pinn.pth  black-scholes-EU-call-KAN-pinn.ipynb
Black-Scholes/PINNs/src/: PINN.py
Black-Scholes/comparison/: compare-low-vol-EU-call.py  compare-low-vol.py  error_stats.txt
Heston/: CMakeLists.txt  Heston.ipynb  README.md  run.sh
Heston/FFT/: CMakeLists.txt  Heston-FFT.cc  HestonFFT-PSO-copy.cc  extra.cc  run.sh
Heston/PINN/: Heston.ipynb
Heston/PINN/src/: model.py
Heston/PINN/test/: Heston.ipynb
Heston/build-carr-madan/: CMakeLists.txt
Heston/monte-carlo/: CMakeLists.txt  Heston-MC.cc  run.sh
Heston/references/: papers.txt  references.txt
Heston/src/: Heston-FFT.cc  models.py
Spread-options/Margrabe/: Margrabe.ipynb
(+3 files in other folders)
